--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cn.sm22</groupId>
     <artifactId>Guoke</artifactId>
-    <version>0.2.1-SNAPSHOT</version>
+    <version>0.3.0-SNAPSHOT</version>
     <build>
         <plugins>
             <plugin>
@@ -28,7 +28,8 @@
                     <archive>
                         <manifest>
                             <!-- 此处指定main方法入口的class -->
-                            <mainClass>cn.ms22.GuokeApplication</mainClass>
+                            <!--<mainClass>cn.ms22.GuokeApplication</mainClass>-->
+                            <mainClass>cn.ms22.interfaces.MainPlant</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
