--- a/src/main/resources/guoke.properties
+++ b/src/main/resources/guoke.properties
@@ -1,12 +1,14 @@
 #正式库
-driver=E:\\env\\driver\\2.42\\chromedriver.exe
+driver=D:\\env\\chromedriver83\\chromedriver.exe
 #driver=D:\\env\\dcm\\2.37\\chromedriver.exe
 #并行数
 parallels=2
 #用户名，密码
 #passwords=D:\\env\\passwd\\1.passwd
-passwords=C:\\Users\\baopz\\Desktop\\guoke\\1.passwd
+passwords=D:\\test\\guoke\\1.passwd
 #持久化文件路径
-output=C:\\Users\\baopz\\Desktop\\guoke
+output=D:\\test\\guoke
 #运行程序，MAIN_APPLICATION_REGISTER，MAIN_APPLICATION_FETCH
-runApplication=MAIN_APPLICATION_REGISTER
+runApplication=MAIN_APPLICATION_FETCH
+#place,MIXTURE,INNER_QUEUE,OUTER_QUEUE
+place=OUTER_QUEUE
